src/test/deca/context/invalid/created/appel_meth/acces_super_field_comme_met.deca
// Description :
//   	appel d'une methode sur un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 1 : ?? <méthode> définit un champ

class A {
int met;
}

class B extends A {
int met(){}
}














